<?xml version="1.0" encoding="UTF-8"?>
<!-- =======================================================================    
        Maven Project Configuration File                                        
                                                                                
        The Geotools Project                                                    
            http://www.geotools.org/                                            
                                                                                
        Version: $Id$              
     ======================================================================= -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.geotools</groupId>
    <artifactId>plugin</artifactId>
    <version>33.2</version>
    <relativePath></relativePath>
  </parent>

  <!-- =========================================================== -->
  <!--     Module Description                                      -->
  <!-- =========================================================== -->
  <groupId>com.abonaro.geotools.jdbc</groupId>
  <artifactId>gt-jdbc</artifactId>
  <version>33.2.1</version>
  <packaging>pom</packaging>
  <name>JDBC DataStore Plugins</name>

  <licenses>
    <license>
      <name>Lesser General Public License (LGPL)</name>
      <url>http://www.gnu.org/copyleft/lesser.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <!-- =========================================================== -->
  <!--     Developers and Contributors                             -->
  <!-- =========================================================== -->
  <developers>
    <developer>
      <id>jdeolive</id>
      <name>Justin Deoliveira</name>
      <email>jdeolive@users.sourceforge.net</email>
      <organization>TOPP</organization>
      <roles>
        <role>Module Maintainer</role>
        <role>Java Developer</role>
      </roles>
    </developer>
  </developers>

  <modules>
    <module>gt-jdbc-oracle</module>
    <module>gt-jdbc-postgis</module>
    <module>gt-jdbc-mysql</module>
  </modules>

  <scm>
    <connection>scm:git:git://github.com/openabnr/gt-jdbc-plugins.git</connection>
    <developerConnection>scm:git:[fetch=]git://github.com/openabnr/gt-jdbc-plugins.git[push=]git@github.com:openabnr/gt-jdbc-plugins.git</developerConnection>
    <url>https://github.com/openabnr/gt-jdbc-plugins</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>abnr.nexus.release</id>
      <name>ABONARO Nexus Repository</name>
      <url>https://dev.abonaro.kr/nexus3/repository/maven-releases/</url>
    </repository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>com.abonaro.geotools</groupId>
      <artifactId>gt-jdbc</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>geotools</id>
      <name>geotools</name>
      <url>https://repo.osgeo.org/repository/release/</url>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-eclipse-plugin</artifactId>
          <configuration>
            <additionalProjectnatures>
              <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
            </additionalProjectnatures>
            <!--<downloadSources>true</downloadSources>
            <downloadJavadocs>true</downloadJavadocs> -->
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <source>17</source>
            <target>17</target>
            <!-- <compilerArgument>-Xlint:all</compilerArgument> -->
            <showWarnings>false</showWarnings>
            <showDeprecation>false</showDeprecation>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
            <skipTests>true</skipTests>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
